@@ -67,11 +67,12 @@ class TestGemCommandManager < RubyGemTestCase
       assert_equal true, check_options[:wrappers]
       assert_equal Gem::Requirement.default, check_options[:version]
       assert_equal Gem.dir, check_options[:install_dir]
+      assert_equal nil, check_options[:bin_dir]
 
       #check settings
       check_options = nil
       @command_manager.process_args(
-        "install --force --test --local --rdoc --install-dir . --version 3.0 --no-wrapper")
+        "install --force --test --local --rdoc --install-dir . --version 3.0 --no-wrapper --bindir . ")
       assert_equal true, check_options[:test]
       assert_equal true, check_options[:generate_rdoc]
       assert_equal true, check_options[:force]
@@ -79,6 +80,7 @@ class TestGemCommandManager < RubyGemTestCase
       assert_equal false, check_options[:wrappers]
       assert_equal Gem::Requirement.new('3.0'), check_options[:version]
       assert_equal Dir.pwd, check_options[:install_dir]
+      assert_equal Dir.pwd, check_options[:bin_dir]
 
       #check remote domain
       check_options = nil
